src/components/Card/Card.scss
@import "../../styles/mixin.scss";

.Cards{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    border-radius: 10px;
    width: 100%;
    height: 340px;
    margin: auto;
    position: relative;
    justify-content: flex-end;
    background-color: black;
    &:hover{
        width: 101%;
        // height: 101%;
        box-shadow: 0px 0px 25px 5px rgba($kasa-main-color, 0.9);
        transition: 0.25s;
        }
        figcaption{
            width: 100%;
        height: 20%;
        // background-color: rgba(255, 96, 96, 0.1);
        border-radius: 0 0 10px 10px;
        color: white;
        font-size: 18px;
        align-content: center;
        position: absolute;
        p{
            margin: 0 0 0 20px;
            font-weight: 600;
        }
    }
    img{
        width: 100%;
        height: 100%;
        border-radius: 10px;
        object-fit: cover;
        opacity: 0.8;
    }
    @include respond-to(mobile){
            display: flex;
            flex-direction: column;
            justify-content: flex-start;
            align-items: flex-end;
            border-radius: 10px;
            width: 100%;
            height: auto;
            margin: auto;
            position: relative;
            justify-content: flex-end;
            background-color: black; 
    }    
} 

